<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="mainViewModel"
            type="com.kioskdriver.viewModel.LoginViewModel" />


    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">


        <EditText
            android:id="@+id/edt_mobile_no"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/mobile_no"
            android:inputType="numberDecimal"
            android:maxLength="10"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.294"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.378"
            />

        <EditText
            android:id="@+id/edt_password"
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:layout_constraintLeft_toLeftOf="@+id/edt_mobile_no"
            app:layout_constraintTop_toBottomOf="@+id/edt_mobile_no" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/login"
            app:layout_constraintLeft_toLeftOf="@+id/edt_password"
            app:layout_constraintRight_toRightOf="@+id/edt_password"
            app:layout_constraintTop_toBottomOf="@+id/edt_password"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:onClick="@{mainViewModel::loginClick}"

            />

    </android.support.constraint.ConstraintLayout>

</layout>